--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
+    "reflect-metadata": "^0.1.13",
     "socket.io": "^4.1.2",
+    "tsyringe": "^4.5.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/socket.io": "^3.0.2",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.8",
