--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev src/server.ts"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.13.0",
     "reflect-metadata": "^0.1.13",
@@ -15,6 +16,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
     "@types/mongoose": "^5.11.97",
     "@types/reflect-metadata": "^0.1.0",
